--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Desarrollo de API REST con Express",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node --watch app.js"
   },
