--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.19.2",
+    "mysql2": "3.9.4",
     "zod": "3.22.4"
   },
   "devDependencies": {
