--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch --env-file .env.local app.js"
+    "start:mysql": "node --watch --env-file .env.local server-with-mysql.js",
+    "start:local": "node --watch --env-file .env.local server-with-local.js"
   },
   "keywords": [
     "api-rest",
