Configurar proyecto para Vercel.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "start": "node --watch --env-file .env.local api/index.js",
     "start:mysql": "node --watch --env-file .env.local server-with-mysql.js",
     "start:local": "node --watch --env-file .env.local server-with-local.js"
   },
