--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch --env-file .env.local index.js",
+    "start": "node index.js",
     "start:mysql": "node --watch --env-file .env.local server-with-mysql.js",
     "start:local": "node --watch --env-file .env.local server-with-local.js"
   },
@@ -18,7 +18,7 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.19.2",
-    "mysql2": "3.9.4",
+    "mysql2": "^3.9.7",
     "zod": "3.22.4"
   },
   "devDependencies": {
