Agregar script para producción.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
+    "dev": "node --watch --env-file .env.local index.js",
     "start:mysql": "node --watch --env-file .env.local server-with-mysql.js",
     "start:local": "node --watch --env-file .env.local server-with-local.js"
   },
